--- a/less/index.less
+++ b/less/index.less
@@ -1,4 +1,29 @@
-// Is this working?
+@import url('https://fonts.googleapis.com/css?family=Hepta+Slab|Montserrat&display=swap');
+
+@font1: 'Montserrat', serif;
+@font2: 'Hepta Slab', sans-serif;
+
+@dark: #333;
+@light: #e3e7e8;
+@lightblue: #b3e0ff;
+
+.flex-column() {
+  display: flex;
+  flex-direction: column;
+  margin: 2%;
+}
+
+.flex-row() {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.sideBorder() {
+  border-left: 0.2rem solid @lightblue;
+  border-right: 0.2rem solid @lightblue;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -57,7 +82,7 @@ html, body {
     height: 100%;
 }
 
-/* End Reset */
+/***************** End Reset *****************/
 html { font-size: 62.5%; }
 h1 {  font-size: 2.2rem; }
 h2 { font-size: 2rem; }
@@ -68,29 +93,6 @@ h6 { font-size:  1rem; }
 
 p {
   font-size: 1.2rem;
-}
-
-@import url('https://fonts.googleapis.com/css?family=Hepta+Slab|Montserrat&display=swap');
-
-@font1: 'Montserrat', serif;
-@font2: 'Hepta Slab', sans-serif;
-
-@dark: #333;
-@light: #b3e0ff;
-
-.flex-column() {
-  display: flex;
-  flex-direction: column;
-  margin: 2%;
-}
-.flex-row() {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-.sideBorder() {
-  border-left: 0.1rem solid @light;
-  border-right: 0.1rem solid @light;
 }
 
 body {
@@ -138,8 +140,8 @@ body {
     #vanity {
       .flex-column();
       width: 100%;
-      background-color: #e3e7e8;
-      border: 0.1rem solid @light;
+      background-color: @light;
+      border: 0.1rem solid @lightblue;
       border-radius: 0.5rem;
       padding: 5% 3%;
       margin: 0;
@@ -159,13 +161,14 @@ body {
 
       h3 {
         font-family: @font1;
+        margin-top: 1%;
         margin-bottom: 2%;
       } // h3
 
       p {
         padding-top: 2%;
         margin-bottom: 2%;
-        border-top: 0.1rem dotted @light;
+        border-top: 0.1rem dotted @lightblue;
       }
 
       button {
@@ -173,8 +176,8 @@ body {
         height: 3rem;
         width: 15rem;
         background-color: #444;
-        color: @light;
-        border: 0.1rem solid @light;
+        color: @lightblue;
+        border: 0.1rem solid @lightblue;
         cursor: pointer;
       }
 
@@ -183,27 +186,81 @@ body {
       }
 
       button:active {
-        border: 0.25rem solid @light;
+        border: 0.25rem solid @lightblue;
       }
     } // #vanity
 
     #personal {
       .flex-row();
+      margin: 2% 0;
 
       section {
         width: 50%;
-      }
-    }
+      } // section
+      
+      #sideA p{
+        margin-top: 1%;
+      } // #sideA p
+      
+      #sideB {
+        margin-left: 2%;
+        
+        h2 {
+          margin-bottom: 2%;
+        } // h2
+        p {
+          padding: 2%;
+          border-left: 0.1rem solid @dark;
+          border-right: 0.1rem solid @dark;
+          border-top: 0.1rem solid @dark;
+        } // p
+        
+        p:nth-child(2) {
+          border-radius:  0.5rem 0.5rem 0 0;
+        } // p:nth-child(2)
+        
+        p:last-child {
+          border-bottom: 0.1rem solid @dark;
+          border-radius: 0 0 0.5rem 0.5rem;
+        } // p:last-child
+      } // #sideB
+    } // #personal
+    
+    #history {
+      margin: 2% 0;
+      width: 100%;
+      
+      table {
+        width: 100%;
+        margin-top: 1%;
+        font-size: 1.2rem;
+        
+        tr {
+          border-top: 0.1rem dotted @dark;
+        } // tr
+        
+        tr:nth-child(even) {
+          background-color: @light;
+        } // tr:nth-child(even)
+        
+        th, td {
+          text-align: center;
+          padding: 1%;
+        } // th, td
+      } // table
+    } // #history
+    
+    footer {
+      .flex-row();
+      width: 100%;
+      justify-content: center;
+      background-color: @dark;
+      border: 0.1rem solid @lightblue;
+      
+      p {
+        padding: 3%;
+        color: @lightblue;
+      } // p
+    } // footer
   } // #container
 } // body
-
-
-
-
-
-
-
-
-
-
-
