--- a/less/index.less
+++ b/less/index.less
@@ -8,25 +8,25 @@
 @lightblue: #b3e0ff;
 
 .flex-column() {
-  display: flex;
-  flex-direction: column;
-  margin: 2%;
+   display: flex;
+   flex-direction: column;
+   margin: 2%;
 }
 
 .flex-row() {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
+   display: flex;
+   flex-direction: row;
+   width: 100%;
 }
 
 .sideBorder() {
-  border-left: 0.2rem solid @lightblue;
-  border-right: 0.2rem solid @lightblue;
+   border-left: 0.2rem solid @lightblue;
+   border-right: 0.2rem solid @lightblue;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
+v2.0 | 20110126
+License: none (public domain)
 */
 
 html, body, div, span, applet, object, iframe,
@@ -42,44 +42,44 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+   margin: 0;
+   padding: 0;
+   border: 0;
+   font-size: 100%;
+   font: inherit;
+   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+   display: block;
 }
 body {
-	line-height: 1;
+   line-height: 1;
 }
 ol, ul {
-	list-style: none;
+   list-style: none;
 }
 blockquote, q {
-	quotes: none;
+   quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+   content: '';
+   content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+   border-collapse: collapse;
+   border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 html, body {
-    height: 100%;
+   height: 100%;
 }
 
 /***************** End Reset *****************/
@@ -92,175 +92,176 @@ h5 { font-size:  1.3rem; }
 h6 { font-size:  1rem; }
 
 p {
-  font-size: 1.2rem;
+   font-size: 1.2rem;
 }
 
 body {
-  background-color: @dark;
-  line-height: 1.8rem;
+   background-color: @dark;
+   line-height: 1.8rem;
 
-  #container {
-    .flex-column();
-    width: 80%;
-    margin: 0 auto;
-    background-color: white;
-    padding: 0 2%;
-    .sideBorder();
-
-    header {
-      width: 100%;
-      margin-top: 2%;
-
-      nav ul {
-        .flex-row();
-        width: 100%;
-        justify-content: flex-end;
-        text-align: end;
-        font-family: @font2;
-        margin: 0;
-        margin-bottom:  2%;
-        padding: 0;
-
-        a {
-          width: 10%;
-          text-decoration: none;
-          color: black;
-        } // a
-
-        a:hover {
-          color: darkgrey;
-        } // a:hover
-
-        a:active {
-          color: darkgreen;
-        } // a:active
-      } // nav ul
-    } // header
-
-    #vanity {
+   #container {
       .flex-column();
-      width: 100%;
-      background-color: @light;
-      border: 0.1rem solid @lightblue;
-      border-radius: 0.5rem;
-      padding: 5% 3%;
-      margin: 0;
+      width: 60%;
+      margin: 0 auto;
+      background-color: white;
+      padding: 0 2%;
+      .sideBorder();
 
-      #image-n-caption {
-        width: 50%;
+      header {
+         width: 100%;
+         margin-top: 2%;
 
-        img {
-          width: 100%;
-        } // img
-      } // #image-n-caption
+         nav ul {
+            .flex-row();
+            width: 100%;
+            justify-content: flex-end;
+            text-align: end;
+            font-family: @font2;
+            margin: 0;
+            margin-bottom:  2%;
+            padding: 0;
 
-      h1 {
-        font-size: 3rem;
-        margin: 1% 0;
-      } // h1
+            a {
+               width: 10%;
+               text-decoration: none;
+               color: black;
 
-      h3 {
-        font-family: @font1;
-        margin-top: 1%;
-        margin-bottom: 2%;
-      } // h3
+               &:hover {
+                  color: darkgrey;
+               } // &:hover
 
-      p {
-        padding-top: 2%;
-        margin-bottom: 2%;
-        border-top: 0.1rem dotted @lightblue;
-      }
+               &:active {
+                  color: darkgreen;
+               } // &:active
+            } // a
+         } // nav ul
+      } // header
 
-      button {
-        justify-content: flex-start;
-        height: 3rem;
-        width: 15rem;
-        background-color: #444;
-        color: @lightblue;
-        border: 0.1rem solid @lightblue;
-        cursor: pointer;
-      }
+      #vanity {
+         .flex-column();
+         width: 100%;
+         background-color: @light;
+         border: 0.1rem solid @lightblue;
+         border-radius: 0.5rem;
+         padding: 5% 3%;
+         margin: 0;
 
-      button:hover {
-        background-color: #566;
-      }
+         #image-n-caption {
+            width: 50%;
 
-      button:active {
-        border: 0.25rem solid @lightblue;
-      }
-    } // #vanity
+            img {
+               width: 100%;
+            } // img
+         } // #image-n-caption
 
-    #personal {
-      .flex-row();
-      margin: 2% 0;
+         h1 {
+            font-size: 3rem;
+            margin: 1% 0;
+         } // h1
 
-      section {
-        width: 50%;
-      } // section
-      
-      #sideA p{
-        margin-top: 1%;
-      } // #sideA p
-      
-      #sideB {
-        margin-left: 2%;
-        
-        h2 {
-          margin-bottom: 2%;
-        } // h2
-        p {
-          padding: 2%;
-          border-left: 0.1rem solid @dark;
-          border-right: 0.1rem solid @dark;
-          border-top: 0.1rem solid @dark;
-        } // p
-        
-        p:nth-child(2) {
-          border-radius:  0.5rem 0.5rem 0 0;
-        } // p:nth-child(2)
-        
-        p:last-child {
-          border-bottom: 0.1rem solid @dark;
-          border-radius: 0 0 0.5rem 0.5rem;
-        } // p:last-child
-      } // #sideB
-    } // #personal
-    
-    #history {
-      margin: 2% 0;
-      width: 100%;
-      
-      table {
-        width: 100%;
-        margin-top: 1%;
-        font-size: 1.2rem;
-        
-        tr {
-          border-top: 0.1rem dotted @dark;
-        } // tr
-        
-        tr:nth-child(even) {
-          background-color: @light;
-        } // tr:nth-child(even)
-        
-        th, td {
-          text-align: center;
-          padding: 1%;
-        } // th, td
-      } // table
-    } // #history
-    
-    footer {
-      .flex-row();
-      width: 100%;
-      justify-content: center;
-      background-color: @dark;
-      border: 0.1rem solid @lightblue;
-      
-      p {
-        padding: 3%;
-        color: @lightblue;
-      } // p
-    } // footer
-  } // #container
+         h3 {
+            font-family: @font1;
+            margin-top: 1%;
+            margin-bottom: 2%;
+         } // h3
+
+         p {
+            padding-top: 2%;
+            margin-bottom: 2%;
+            border-top: 0.1rem dotted @lightblue;
+         } // p
+
+         button {
+            justify-content: flex-start;
+            height: 3rem;
+            width: 15rem;
+            background-color: #444;
+            color: @lightblue;
+            border: 0.1rem solid @lightblue;
+            cursor: pointer;
+
+            &:hover {
+               background-color: #566;
+            } // &:hover
+
+            &:active {
+               border: 0.25rem solid @lightblue;
+            } // &:active
+         } // button
+      } // #vanity
+
+      #personal {
+         .flex-row();
+         margin: 2% 0;
+
+         section {
+            width: 50%;
+         } // section
+
+         #sideA p{
+            margin-top: 1%;
+         } // #sideA p
+
+         #sideB {
+            margin-left: 2%;
+
+            h2 {
+               margin-bottom: 2%;
+            } // h2
+
+            p {
+               padding: 2%;
+               border-left: 0.1rem solid @dark;
+               border-right: 0.1rem solid @dark;
+               border-top: 0.1rem solid @dark;
+
+               &:nth-child(2) {
+                  border-radius:  0.5rem 0.5rem 0 0;
+               } // &:nth-child(2)
+
+               &:last-child {
+                  border-bottom: 0.1rem solid @dark;
+                  border-radius: 0 0 0.5rem 0.5rem;
+               } // &:last-child
+            } // p
+         } // #sideB
+      } // #personal
+
+      #history {
+         margin: 2% 0;
+         width: 100%;
+
+         table {
+            width: 100%;
+            margin-top: 1%;
+            font-size: 1.2rem;
+
+            tr {
+               border-top: 0.1rem dotted @dark;
+
+               &:nth-child(even) {
+                  background-color: @light;
+               } // &:nth-child(even)
+            } // tr
+
+            th, td {
+               text-align: center;
+               padding: 1%;
+            } // th, td
+         } // table
+      } // #history
+
+      footer {
+         .flex-row();
+         width: 100%;
+         justify-content: center;
+         background-color: @dark;
+         border: 0.1rem solid @lightblue;
+
+         p {
+            padding: 3%;
+            color: @lightblue;
+         } // p
+      } // footer
+   } // #container
 } // body
