--- a/less/index.less
+++ b/less/index.less
@@ -106,6 +106,8 @@ body {
       background-color: white;
       padding: 0 2%;
       .sideBorder();
+      border-top: 0.1rem solid @lightblue;
+      border-bottom: 0.1rem solid @lightblue;
 
       header {
          width: 100%;
@@ -256,9 +258,13 @@ body {
          width: 100%;
          justify-content: center;
          background-color: @dark;
-         border: 0.1rem solid @lightblue;
+         border-top: 0.1rem solid @lightblue;
+         border-left: 0.1rem solid @lightblue;
+         border-right: 0.1rem solid @lightblue;
 
          p {
+            text-align: center;
+            width: 100%;
             padding: 3%;
             color: @lightblue;
          } // p
