--- a/less/index.less
+++ b/less/index.less
@@ -241,6 +241,8 @@ body {
             width: 100%;
             margin-top: 1%;
             font-size: 1.2rem;
+            
+            th { font-weight: 800; }
 
             tr {
                border-top: 0.1rem dotted @dark;
