--- a/css/index.css
+++ b/css/index.css
@@ -190,6 +190,12 @@ body #container {
   border-top: 0.1rem solid #b3e0ff;
   border-bottom: 0.1rem solid #b3e0ff;
 }
+@media (max-width: 500px) {
+  body #container {
+    width: 100%;
+    margin: 0 1%;
+  }
+}
 body #container header {
   width: 100%;
   margin-top: 2%;
@@ -198,8 +204,18 @@ body #container header {
 body #container header #spacer {
   width: 60%;
 }
+@media (max-width: 500px) {
+  body #container header #spacer {
+    display: none;
+  }
+}
 body #container header nav {
   width: 40%;
+}
+@media (max-width: 500px) {
+  body #container header nav {
+    width: 100%;
+  }
 }
 body #container header nav ul {
   display: flex;
@@ -241,6 +257,12 @@ body #container #vanity h1 {
   font-size: 3rem;
   margin: 1% 0;
 }
+@media (max-width: 500px) {
+  body #container #vanity h1 {
+    font-size: 2.8rem;
+    line-height: 2.2rem;
+  }
+}
 body #container #vanity h3 {
   font-family: 'Montserrat', serif;
   margin-top: 1%;
@@ -271,8 +293,21 @@ body #container #personal {
   flex-direction: row;
   margin: 2% 0;
 }
+@media (max-width: 500px) {
+  body #container #personal {
+    display: flex;
+    flex-direction: column;
+    margin: 2%;
+  }
+}
 body #container #personal section {
   width: 50%;
+}
+@media (max-width: 500px) {
+  body #container #personal section {
+    width: 100%;
+    margin-bottom: 2%;
+  }
 }
 body #container #personal #sideA p {
   margin-top: 1%;
